# OpenMM

./: CMakeLists.txt  README.md
SCI/: CMakeLists.txt
SCI/src/: defines_uniform.h  library_fixed_uniform.cpp  library_fixed_uniform_cheetah.cpp
SCI/src/BuildingBlocks/: truncation.cpp  truncation.h
SCI/src/OT/: ot.h
SCI/src/OT/ferret/: silent_ot.h
SCI/src/cheetah/: cheetah-api.cpp  cheetah-api.h
SCI/src/utils/: constants.h  net_io_channel.h
include/gemini/cheetah/: hom_bn_ss.cc  hom_bn_ss.h
networks/: main_densenet121.cpp  main_resnet50.cpp
scripts/: bole_test-run.sh  build.sh  common.sh  densnet-run.sh  field_to_ring_test-run.sh  resnet-run.sh  ring_extension_test-run.sh  ring_to_field_test-run.sh  run-client.sh  run-server.sh  sqnet-run.sh  throttle.sh
tests/: bole_test.cpp  field_to_ring_test.cpp  ring_extension_test.cpp  ring_to_field_test.cpp
